--- a/tar.is/website/hafaSamband/hafaSamband.css
+++ b/tar.is/website/hafaSamband/hafaSamband.css
@@ -4,13 +4,14 @@ html{
     align-items: center;
     width: 100%;
     max-width: 100vw;
+    min-height: 100vh;
     font-family: Montserrat;
     font-style: normal;
 }
 
     body{
         height: 100%;
-        width: 100vw;
+        width: 100%;
         background: rgb(2,0,36);
         background: linear-gradient(300deg, rgba(2,0,36,1) 1%, rgba(29,31,74,1) 13%, rgba(42,45,91,1) 43%, rgba(61,59,115,1) 48%, rgba(63,165,213,1) 100%);
         overflow: scroll;
@@ -19,7 +20,7 @@ html{
         .main{
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
             min-height: 68vh;
             max-height: auto;
@@ -27,12 +28,19 @@ html{
         }
 
             .title{
+                width: 90%;
                 margin: 0 0 5px 0;
+                font-size: 25px;
+                text-align: center;
             }
 
             .subtitle{
+                width: 90%;
+                margin: 2.5px 0 2.5px 0;
+                font-size: 16px;
                 font-weight: 500;
-                margin: 10px 0 10px 0;
+                text-align: center;
+
             }
 
             .info{
@@ -55,7 +63,7 @@ html{
                 .info div input{
                     height: 25px;
                     width: 100%;
-                    border-radius: 10px;
+                    border-radius: 5px;
                     font-size: 20px;
                     padding: 5px;
                 }
@@ -67,6 +75,24 @@ html{
                     border-radius: 10px;
                     resize: none;
                 }
+
+                .info .button{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100px;
+                    height: 50px;
+
+                    background: white;
+                    color: #3FA5D5;
+                    border-radius: 15px;
+                    margin: 20px 0 ;
+                }
+
+                    .info .button h3{
+                        margin: 0;
+                    }
             
 /* ----------LARGER TABLET / DESKTOP---------- */
 @media only screen and (min-width: 1024px){
@@ -76,6 +102,7 @@ html{
 
     .main{
         min-height: 71.7vh;
+        justify-content: center;
     }
 
         .title{
@@ -90,6 +117,10 @@ html{
         }
 
         .info{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
             width: 55%;
         }
 
@@ -99,6 +130,7 @@ html{
                 justify-content: space-between;
                 align-items: flex-start;
                 height: 30%;
+                width: 100%;
             }
 
             .info h3{
@@ -108,16 +140,20 @@ html{
             .info div input{
                 height: 25px;
                 width: 100%;
-                border-radius: 10px;
                 font-size: 20px;
                 padding: 5px;
+                text-align: center;
             }
 
             .info div .textIn{
-                height: 180px;
+                height: 100px;
                 width: 100%;
-                padding: 10aapx;
-                border-radius: 10px;
+                padding: 10px;
+                border-radius: 5px;
                 resize: none;
+            }
+
+            .info .button{
+                cursor: pointer;
             }
 }
