--- a/tar.is/website/hugbunadur/hugbunadur.css
+++ b/tar.is/website/hugbunadur/hugbunadur.css
@@ -1,16 +1,17 @@
 html{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
     max-width: 100vw;
+    min-height: 100vh;
     font-family: Montserrat;
     font-style: normal;
 }
 
     body{
         height: 100%;
-        width: 100vw;
+        width: 100%;
         background: rgb(2,0,36);
         background: linear-gradient(300deg, rgba(2,0,36,1) 1%, rgba(29,31,74,1) 13%, rgba(42,45,91,1) 43%, rgba(61,59,115,1) 48%, rgba(63,165,213,1) 100%);
         overflow: scroll;
@@ -20,7 +21,7 @@ html{
             display: flex;
             flex-direction: column;
             justify-content: center;
-            height: 71vh;
+            height: 100%;
             color: white;
         }
 
@@ -28,8 +29,9 @@ html{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 85vh;
+                justify-content: center;
 
+                height: 70vh;
                 text-align: center;
             }
 
@@ -54,7 +56,7 @@ html{
                     }
 
                     .s1Info h5{
-                        font-size: 12px;
+                        font-size: 16px;
                         width: 80%;
                         font-weight: 600;
                         margin: 5% 0 0 0 ;
@@ -64,8 +66,8 @@ html{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 90vh;
-
+                
+                height: 65vh;
                 text-align: center;
             }
 
@@ -85,11 +87,17 @@ html{
                     }
 
                     .s2Info h3{
-                        font-size: 20px;
+                        font-size: 16px;
                         width: 80%;
                         font-weight: 600;
                         margin: 5% 0 0 0 ;
                     }
+                
+                .s2Mobile{
+                    width: 300px;
+                    border-radius: 25px;
+                    margin: 50px 0;
+                }    
 
                 .s2Button{
                     display: flex;
@@ -108,8 +116,8 @@ html{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 90vh;
-
+                
+                height: 70vh;
                 text-align: center;
             }
 
@@ -129,11 +137,17 @@ html{
                     }
 
                     .s3Info h3{
-                        font-size: 20px;
+                        font-size: 16px;
                         width: 80%;
                         font-weight: 600;
                         margin: 5% 0 0 0 ;
                     }
+
+                .s3Mobile{
+                    width: 300px;
+                    border-radius: 25px;
+                    margin: 50px 0;
+                }
 
                 .s3Button{
                     display: flex;
