--- a/tar.is/website/index.css
+++ b/tar.is/website/index.css
@@ -4,6 +4,7 @@ html{
     align-items: center;
     width: 100%;
     max-width: 100vw;
+    min-height: 100vh;
     font-family: Montserrat;
     font-style: normal;
     background: rgb(2,0,36);
@@ -12,7 +13,7 @@ html{
 
     body{
         height: 100%;
-        width: 100vw;
+        width: 100%;
         overflow-y: scroll;
         overflow-x: hidden;
     }
@@ -52,7 +53,7 @@ html{
                     }
 
                     .s1Info h5{
-                        font-size: 12px;
+                        font-size: 14px;
                         width: 80%;
                         font-weight: 600;
                         margin: 5% 0 0 0 ;
@@ -62,7 +63,7 @@ html{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 90vh;
+                height: 80vh;
 
                 text-align: center;
             }
@@ -87,7 +88,7 @@ html{
                     }
 
                     .s2Text{
-                        font-size: 20px;
+                        font-size: 16px;
                         width: 80%;
                         font-weight: 600;
                         margin: 5% 0 0 0 ;
@@ -110,7 +111,7 @@ html{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 90vh;
+                height: 70vh;
 
                 text-align: center;
             }
@@ -136,7 +137,7 @@ html{
                     }
 
                     .s3Text{
-                        font-size: 20px;
+                        font-size: 16px;
                         width: 80%;
                         font-weight: 600;
                         margin: 5% 0 0 0 ;
