--- a/tar.is/website/umOkkur/umOkkur.css
+++ b/tar.is/website/umOkkur/umOkkur.css
@@ -4,57 +4,24 @@ html{
     align-items: center;
     width: 100%;
     max-width: 100vw;
+    min-height: 100vh;
     font-family: Montserrat;
     font-style: normal;
 }
 
     body{
         height: 100%;
-        width: 100vw;
+        width: 100%;
         background: rgb(2,0,36);
         background: linear-gradient(300deg, rgba(2,0,36,1) 1%, rgba(29,31,74,1) 13%, rgba(42,45,91,1) 43%, rgba(61,59,115,1) 48%, rgba(63,165,213,1) 100%);
         overflow: scroll;
     }
-    
-        header{
-            height: 15vh;
-            width: 100vw;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            border-style: solid;
-            border-top: none;
-            border-right: none;
-            border-left: none;
-            border-right: none;
-            border-width: 0px;
-            border-color: white;
-        }
-
-            .menuIcon{
-                width: 35px;
-                height: 30px;
-                margin-right: 10%;
-                z-index: 1;
-            }
-
-            .logo{
-                width: 133px;
-                height: 133px;
-            }
-
-            .searchIcon{
-                width: 37px;
-                height: 37px;
-                margin-left: 10%;
-            }
 
         .inProgress{
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 85vh;
+            height: 100%;
         }
         
         .main{
@@ -188,7 +155,6 @@ html{
                 }
 
         .footer{
-            
         }
 
 /* ----------MOBILE / TABLET---------- */
