--- a/tar.is/website/hafaSamband/hafaSamband.css
+++ b/tar.is/website/hafaSamband/hafaSamband.css
@@ -27,21 +27,28 @@ html{
             color: white;
         }
 
-            .title{
-                width: 90%;
-                margin: 0 0 5px 0;
-                font-size: 25px;
+            .titles{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
                 text-align: center;
             }
 
-            .subtitle{
-                width: 90%;
-                margin: 2.5px 0 2.5px 0;
-                font-size: 16px;
-                font-weight: 500;
-                text-align: center;
+                .title{
+                    width: 90%;
+                    margin: 0 0 5px 0;
+                    font-size: 25px;
+                    text-align: center;
+                }
 
-            }
+                .subtitle{
+                    width: 90%;
+                    margin: 2.5px 0 2.5px 0;
+                    font-size: 16px;
+                    font-weight: 500;
+                    text-align: center;
+
+                }
 
             .info{
                 width: 70%;
