--- a/tar.is/website/hugbunadur/hugbunadur.css
+++ b/tar.is/website/hugbunadur/hugbunadur.css
@@ -29,7 +29,7 @@ html{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: center;
+                justify-content: flex-start;
 
                 height: 70vh;
                 text-align: center;
@@ -37,7 +37,7 @@ html{
 
                 .s1Devices{
                     width: 300px;
-                    padding-left: 50px;
+                    padding: 50px 0 0 50px;
                 }
                 
                 .s1Info{
@@ -45,7 +45,6 @@ html{
                     flex-direction: column;
                     align-items: center;
 
-                    margin-bottom: 50px;
                 }
 
                     .s1Info h1{
